--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://",
+  "homepage": "https://suryansaravanan.github.io/to-do-reactjs",
   "name": "todo-react",
   "version": "0.1.0",
   "private": true,
